syntax = "proto3";


option csharp_namespace = "bankClient";


service ChatServerService {
  rpc Register (ChatClientRegisterRequest) returns (ChatClientRegisterReply);
  rpc SendMessage (ChatMessageRequest) returns (ChatMessageReply);
  rpc Update (ChatUpdateRequest) returns (ChatUpdateReply);
}
message ChatClientRegisterRequest {
  string nick = 1;
  string url = 2;	
}
message ChatClientRegisterReply {
	bool ok = 1;
}

message ChatMessageRequest {
	string nick = 1;
	string message = 2;	
}

message ChatMessageReply {
	bool ok = 1;
}

message ChatUpdateRequest {}

message ChatUpdateReply {
	string messages = 1;
}

// NEW HERE VER DPS ---- account number ?

service BankClientCommunications {
	rpc Deposite(DepositeRequest) returns (DepositeReply);
	rpc Withdrawal(WithdrawalRequest) returns (WithdrawalReply);
	rpc Read(ReadRequest) returns (ReadReply);
}

message DepositeRequest{
	string name = 1;
	float amount = 2;
}

message DepositeReply{
	bool ok = 1;
}

message WithdrawalRequest{
	string name = 1;
	float amount = 2;
}

message WithdrawalReply{
	bool ok = 1;
}

message ReadRequest{
	string name = 1;
}

message ReadReply{
	bool ok = 1;
}

